--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,39 @@
+name: Flutter Build Windows
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
-    branches:
-      - main
-      - master
-      - develop
-name: "Build & Release"
+    branches: [main]
+
 jobs:
   build:
-    name: Build & Release
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Export Release Timestamp
+        run: echo "APP_VERSION=v$(date +'%d-%b-%Y-%H-%M-%S')" >> $GITHUB_ENV
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+          java-version: '15'
+          distribution: 'adopt'
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.2.0'
-      - run: flutter pub get
-      - run: flutter test
-      - run: flutter build apk --debug --split-per-abi
-      - run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: Push to Releases
+          flutter-version: '3.x'
+          channel: 'stable'
+
+      - name: Install pub Dependencies
+        run: flutter pub get
+
+      - name: Build Release Windows App
+        run: flutter build windows
+
+      - name: Release Apps
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/debug/*,build/ios/iphoneos/app.ipa"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
+          tag: ${{ env.APP_VERSION }}
+          name: ${{ env.APP_VERSION }}
+          artifacts: build/windows/runner/Release/
