--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,26 @@
-name: Flutter Build iOS and Android
+name: "Build APK and IPA"
 on:
+  pull_request:
+    branches:
+      - main
   push:
-    branches: [main]
-
+    branches:
+      - main
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
-      - name: Export Release Timestamp
-        run: echo "APP_VERSION=v$(date +'%d-%b-%Y-%H-%M-%S')" >> $GITHUB_ENV
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          java-version: '15'
-          distribution: 'adopt'
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.x'
-          channel: 'stable'
-
-      - name: Install pub Dependencies
-        run: flutter pub get
-
-      - name: Build Release Android App
-        run: flutter build apk --debug --split-per-abi
-
-      - name: Build Release iOS App
-        run: |
+          flutter-version: '2.2.0'
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk --debug --split-per-abi
+      - run: |
           flutter build ios --no-codesign
           cd build/ios/iphoneos
           mkdir Payload
@@ -40,12 +28,9 @@ jobs:
           ln -s ../Runner.app
           cd ..
           zip -r app.ipa Payload
-
-      - name: Release Apps
+      - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
+          artifacts: "build/app/outputs/apk/debug/*,build/ios/iphoneos/app.ipa"
           tag: ${{ env.APP_VERSION }}
           name: ${{ env.APP_VERSION }}
-          artifacts: |
-            build/app/outputs/apk/debug/*,
-            build/ios/iphoneos/app.ipa
